--- a/package.json
+++ b/package.json
@@ -18,10 +18,19 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/postcss": "^4.0.5",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/start": "^1.102.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.5",
+    "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3"
   }
 }
