--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,18 +14,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: '20'
-          cache: 'npm'
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: bun run build
 
       # Add this step if you have tests in the future
       # - name: Run tests
-      #   run: npm test
+      #   run: bun test
