--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/postcss": "^4.0.5",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/start": "^1.102.1",
@@ -33,5 +35,12 @@
     "tailwindcss": "^4.0.5",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3"
+  },
+  "packageManager": "npm@10.9.2+sha512.8ab88f10f224a0c614cb717a7f7c30499014f77134120e9c1f0211ea3cf3397592cbe483feb38e0c4b3be1c54e347292c76a1b5edb94a3289d5448484ab8ac81",
+  "dockerfile": {
+    "secrets": [
+      "SUPABASE_URL",
+      "SUPABASE_ANON_KEY"
+    ]
   }
 }
