ci: add secrets

--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --build-secret SUPABASE_URL=$SUPABASE_URL --build-secret SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY
+      - run: flyctl deploy --remote-only --build-secret SUPABASE_URL=${{ secrets.SUPABASE_URL }} --build-secret SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
