--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "tailwindcss": "^4.0.5",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3"
+  },
+  "dockerfile": {
+    "secrets": [
+      "SUPABASE_URL",
+      "SUPABASE_ANON_KEY"
+    ]
   }
 }
