--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/postcss": "^4.0.5",
     "@tanstack/react-router": "^1.102.1",
     "@tanstack/start": "^1.102.1",
@@ -37,7 +39,8 @@
   "dockerfile": {
     "secrets": [
       "SUPABASE_URL",
-      "SUPABASE_ANON_KEY"
+      "SUPABASE_ANON_KEY",
+      "SITE_URL"
     ]
   }
 }
