--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,6 @@ primary_region = 'sin'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[env]
+  SITE_URL = "https://wtdt.fly.dev"  # Your actual production URL
