--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/bun": "latest",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
@@ -23,18 +22,22 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/postcss": "^4.0.5",
-    "@tanstack/react-router": "^1.102.1",
-    "@tanstack/start": "^1.102.1",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-router": "^1.106.0",
+    "@tanstack/start": "^1.106.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.1",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-markdown": "^9.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.5",
     "tailwindcss-animate": "^1.0.7",
-    "vinxi": "^0.5.3"
+    "vinxi": "^0.5.3",
+    "zustand": "^5.0.3"
   },
   "dockerfile": {
     "secrets": [
