--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,13 +19,8 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Clean node_modules and lockfile
-        run: |
-          rm -rf node_modules
-          rm package-lock.json
-
       - name: Install dependencies
-        run: bun install
+        run: bun install --frozen-lockfile
 
       - name: Build
         run: bun run build
