--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/bun": "latest",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-router": "^1.106.0",
+    "@tanstack/start": "^1.106.0",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
@@ -22,10 +26,6 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/postcss": "^4.0.5",
-    "@tanstack/react-query": "^5.66.7",
-    "@tanstack/react-router": "^1.106.0",
-    "@tanstack/start": "^1.106.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
