--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "@tanstack/react-query": "^5.66.7",
-    "@tanstack/react-router": "^1.106.0",
-    "@tanstack/start": "^1.106.0",
     "@vitejs/plugin-react": "^4.3.4"
   },
   "peerDependencies": {
@@ -37,7 +34,10 @@
     "tailwindcss": "^4.0.5",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-router": "^1.106.0",
+    "@tanstack/start": "^1.106.0"
   },
   "dockerfile": {
     "secrets": [
