--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Remove node_modules and package-lock.json
+        run: |
+          rm -rf node_modules
+          rm package-lock.json
+
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
