ci: add tailwind package for linux x64

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.34.8"
+    "@rollup/rollup-linux-x64-gnu": "^4.34.8",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.7"
   }
 }
