--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Remove node_modules and package-lock.json
         run: |
           rm -rf node_modules
-          rm package-lock.json
+          rm bun.lockb
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: Build
         run: bun run build
