--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,35 +1,22 @@
-name: Integration
+name: Integration Tests
 
 on:
-  push:
-    branches: [ dev ]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  build:
-    name: Build and Test
+  test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Bun
+      
+      - name: Set up Bun
         uses: oven-sh/setup-bun@v1
         with:
-          bun-version: latest
-
-      - name: Remove node_modules and package-lock.json
-        run: |
-          rm -rf node_modules
-          rm bun.lock
+          bun-version: 1.2.0
 
       - name: Install dependencies
         run: bun install
 
-      - name: Build
-        run: bun run build
-
-      # Add this step if you have tests in the future
-      # - name: Run tests
-      #   run: bun test
+      - name: Run tests
+        run: bun test
