--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.34.8",
-    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.7"
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.7",
+    "lightningcss-linux-x64-gnu": "^1.25.0"
   }
 }
